@@ -66,6 +66,14 @@ fi
 
 
 %changelog
+* Fri Nov 27 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.14-1
+- update to the cmake library of Elements 3.9
+- fix the cleaning of the ELogin banner
+- fix the setup of the environment for bash. Now it is not repeated for 
+  every subshell.
+- add the new "python setup.py test" command. It is based on a generated
+  py.test script.
+
 * Tue Oct 13 2015 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 1.13.1-1
 - Bugfix. The E-Run command was not checking the existence of the
   directory of a project before trying to list its version subdirectories.
